# UserSpaceShapingDemo

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  Directory.Build.props  Directory.Packages.props  LinuxOnly.cs  Makefile  README.md  UserSpaceShapingDemo.props  UserSpaceShapingDemo.slnx  build_and_run.sh  configure.sh  install_deps_ubuntu.sh  meta.h  shaper_user.c  tc_egress_kern.c  xdp_egress_kern.c  xdp_ingress_kern.c  xdp_shaper_user.c
.github/: copilot-instructions.md
.github/workflows/: pipeline.yml
UserSpaceShapingDemo.Benchmarks/: DirectBenchmark.cs  ForwardingBenchmark.cs  ForwardingBenchmarks.cs  NativeEventBenchmarks.cs  NativeQueueBenchmarks.cs  Program.cs  TrafficBenchmark.cs  UserSpaceShapingDemo.Benchmarks.csproj  XdpForwarderBenchmarks.cs
UserSpaceShapingDemo.Lib/: CompletionRingBuffer.cs  ConsumerRingBuffer.cs  Event.cs  FileDescriptor.cs  FileObject.cs  FillRingBuffer.cs  Global.cs  HangDebugHelper.cs  IFileObject.cs  InterfaceNameHelper.cs  LibBpf.cs  LibC.cs  LinuxScheduler.cs  MemoryLimit.cs  NativeCancellationToken.cs  NativeErrorNumber.cs  NativeException.cs  NativeObject.cs  NetNs.cs  ProducerRingBuffer.cs  RingBuffer.cs  RxRingBuffer.cs  TxRingBuffer.cs  UMemory.cs  UserSpaceShapingDemo.Lib.csproj  Worker.cs  XdpDescriptor.cs  XdpForwarder.cs  XdpSocket.cs  XdpSocketBindMode.cs  XdpSocketMode.cs
UserSpaceShapingDemo.Lib/Bpf/: CompletionRingBuffer.cs  ConsumerRingBuffer.cs  FillRingBuffer.cs  ProducerRingBuffer.cs  (+10 more)
UserSpaceShapingDemo.Tests/: DpdkErrorTests.cs  DpdkRuntimeTests.cs  EthernetToolTests.cs  ForwarderTests.cs  LibDpdkTests.cs  LinkTests.cs  NativeQueueTests.cs  NetNsTests.cs  NlAddressTests.cs  PacketDebugExtensions.cs  RtnlBridgeLinkTests.cs  RtnlSocketTests.cs  RtnlVEthLinkTests.cs  Script.cs  StructLayoutTests.cs  TrafficForwarderType.cs  TrafficForwardingSetup.cs  TrafficSetup.cs  TrafficSetupTests.cs  UMemoryTests.cs  UserSpaceShapingDemo.Tests.csproj  XdpForwarderTests.cs  XdpSimpleForwarderTests.cs  XdpSocketTests.cs
native/: CMakeLists.txt  Makefile  install_deps_ubuntu.sh  run_with_veth.sh  xdp_shaper.c
(+111 files in other folders)
